[package]
name = "janitor"
version = "0.1.0"
authors = ["Evance Soumaoro <evanxg852000@gmail.com>"]
edition = "2018"
description = "A hight performance and bare metal web service monitoring system"
repository = "https://github.com/evanxg852000/janitor"
readme = "README.md"
license = "MIT"

[dependencies]
async-std = {version = "1.6.1", features = ["attributes", "unstable"]}
tide = "0.13.0"
serde = "1.0.115"
serde_json = "1.0.57"
crossbeam-channel = "0.4.3"
futures = "0.3.5"
surf = "1.0.3"
include_dir = "0.6.0"
